2007-11-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h,
	src/channel.c,
	src/betaradio.c,
	src/channel.h: Add live channel.

2007-11-06	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/channel.c: Change the url of stream source, and release 0.1.1

2007-07-07	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac,
	src/eggtrayicon.h,
	src/gstplay.c,
	src/sitelist.h,
	src/channel.c,
	src/gstplay.h,
	src/Makefile.am,
	src/betaradio.c,
	src/eggtrayicon.c,
	src/channel.h,
	COPYING,
	data/betaradio.desktop.in,
	data/Makefile.am,
	data/betaradio.png,
	Makefile.am: betaradio v0.1.0 released