@@ -49,51 +49,31 @@ void onStop( GtkWidget* item, gpointer user_data )
 	}
 }
 
-gpointer onRadioPlay(gpointer *data)
+gpointer onPlay(gpointer *data)
 {
-		gchar* url = get_channel_url_by_id((gchar*) data, 0);
+		gchar* id = g_object_get_data(G_OBJECT(data), "id");
+		gchar* live = g_object_get_data(G_OBJECT(data), "live");
+		gchar* url = get_channel_url_by_id((gchar*) id, live ? 1 : 0);
+		//g_debug("%s:%d %s %p %p %p\n", __FILE__, __LINE__, __FUNCTION__, id, live, url);
 		if (url != NULL) {
-			current = (gchar*) data;
+			current = (gchar*) id;
 			//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
 			gstPlay(url);
 			//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
+			g_free(url);
 		}
-		g_free(url);
 		g_thread_exit(NULL);
 }
 
-gpointer onLivePlay(gpointer *data)
-{
-		gchar* url = get_channel_url_by_id((gchar*) data, 1);
-		if (url != NULL) {
-			current = (gchar*) data;
-			//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
-			gstPlay(url);
-			//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
-		}
-		g_free(url);
-		g_thread_exit(NULL);
-}
-
-void onRadioMenu( GtkWidget* item, gpointer user_data )
+void onMenu( GtkWidget* item, gpointer user_data )
 {
 	if (GTK_CHECK_MENU_ITEM(item)->active) {
 		//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
-		gchar* id = g_object_get_data(G_OBJECT(item), "id");
-		g_thread_create(onRadioPlay, id, FALSE, NULL);
+		g_thread_create((GThreadFunc) onPlay, item, FALSE, NULL);
 	}
 }
 
-void onLiveMenu( GtkWidget* item, gpointer user_data )
-{
-	if (GTK_CHECK_MENU_ITEM(item)->active) {
-		//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
-		gchar* id = g_object_get_data(G_OBJECT(item), "id");
-		g_thread_create(onLivePlay, id, FALSE, NULL);
-	}
-}
-
-void appendRadioMenu( const char *name, GtkWidget* menu, GSList *group, char **site_list )
+void appendMenu( const char *name, GtkWidget* menu, GSList *group, char **site_list, gboolean bLive )
 {
 	//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
 	GtkWidget *label = NULL;
@@ -109,32 +89,10 @@ void appendRadioMenu( const char *name, GtkWidget* menu, GSList *group, char **s
 		menu_item = gtk_radio_menu_item_new_with_label( group, *site_list );
 		group = gtk_radio_menu_item_get_group( GTK_RADIO_MENU_ITEM(menu_item) );
 		g_object_set_data( G_OBJECT(menu_item), "id", *(site_list + 1) );
+		g_object_set_data( G_OBJECT(menu_item), "live", bLive ? *(site_list + 1) : NULL );
 		if( current && 0 == strcmp( *(site_list + 1), current ) )
 			gtk_check_menu_item_set_active( GTK_CHECK_MENU_ITEM(menu_item), TRUE );
-		g_signal_connect( G_OBJECT(menu_item), "toggled", G_CALLBACK(onRadioMenu), NULL );
-		gtk_menu_shell_append( GTK_MENU_SHELL(sub_menu), menu_item );
-	} while (*(site_list += 2));
-}
-
-void appendLiveMenu( const char *name, GtkWidget* menu, GSList *group, char **site_list )
-{
-	//g_debug("%s %s %d\n", __FILE__, __FUNCTION__, __LINE__);
-	GtkWidget *label = NULL;
-	GtkWidget *sub_menu = NULL;
-	GtkWidget *menu_item = NULL;
-
-	label = gtk_menu_item_new_with_label(name);
-	gtk_menu_shell_append(GTK_MENU_SHELL(menu), label);
-	sub_menu = gtk_menu_new();
-	gtk_menu_item_set_submenu(GTK_MENU_ITEM(label), sub_menu);
-
-	do {
-		menu_item = gtk_radio_menu_item_new_with_label( group, *site_list );
-		group = gtk_radio_menu_item_get_group( GTK_RADIO_MENU_ITEM(menu_item) );
-		g_object_set_data( G_OBJECT(menu_item), "id", *(site_list + 1) );
-		if( current && 0 == strcmp( *(site_list + 1), current ) )
-			gtk_check_menu_item_set_active( GTK_CHECK_MENU_ITEM(menu_item), TRUE );
-		g_signal_connect( G_OBJECT(menu_item), "toggled", G_CALLBACK(onLiveMenu), NULL );
+		g_signal_connect( G_OBJECT(menu_item), "toggled", G_CALLBACK(onMenu), NULL );
 		gtk_menu_shell_append( GTK_MENU_SHELL(sub_menu), menu_item );
 	} while (*(site_list += 2));
 }
@@ -153,14 +111,14 @@ void onEggTrayEvent( GtkWidget* widget, GdkEventButton* evt, gpointer user_data 
 
 	gtk_menu_shell_append( GTK_MENU_SHELL(menu), gtk_separator_menu_item_new() );
 
-	appendRadioMenu("音樂", menu, group, music_site_list);
-	appendRadioMenu("生活資訊", menu, group, life_site_list);
-	appendRadioMenu("新聞", menu, group, news_site_list);
-	appendRadioMenu("綜合", menu, group, others_site_list);
-	appendRadioMenu("外語", menu, group, foreign_site_list);
-	appendRadioMenu("多元文化", menu, group, culture_site_list);
-	appendRadioMenu("交通", menu, group, traffic_site_list);
-	appendLiveMenu("免費影視", menu, group, live_site_list);
+	appendMenu("音樂", menu, group, music_site_list, 0);
+	appendMenu("生活資訊", menu, group, life_site_list, 0);
+	appendMenu("新聞", menu, group, news_site_list, 0);
+	appendMenu("綜合", menu, group, others_site_list, 0);
+	appendMenu("外語", menu, group, foreign_site_list, 0);
+	appendMenu("多元文化", menu, group, culture_site_list, 0);
+	appendMenu("交通", menu, group, traffic_site_list, 0);
+	appendMenu("免費影視", menu, group, live_site_list, 1);
 
 	gtk_menu_shell_append( GTK_MENU_SHELL(menu), gtk_separator_menu_item_new() );
 
